src/qqq/styles/qqq-override-styles.css
/* ... */
.MuiDataGrid-columnHeaders
{
   scrollbar-gutter: stable;
}

/* new style for toggle buttons */
.MuiToggleButtonGroup-root
{
   padding: 0.25rem;
   border: 1px solid #BDBDBD;
   border-radius: 0.5rem !important;
}

.MuiToggleButtonGroup-root .MuiButtonBase-root
{
   text-transform: none;
   font-size: 0.75rem;
   color: black;
   font-weight: 600;
   border-radius: 0.375rem !important; /* overriding left/right edge overrides for first/last */
   border: none;
   flex: 1 1 0px;
}

.MuiToggleButtonGroup-root .MuiButtonBase-root.Mui-selected
{
   background: rgba(117, 117, 117, 0.20);
}

.MuiToggleButtonGroup-root .MuiButtonBase-root.Mui-disabled
{
   border: none;
}

.entityForm h5,
.recordView h5
{
   font-weight: 500;
}

.recordView .widget
{
   padding: 24px;
}

.entityForm .widget
{
   padding: 24px;
}

.MuiPickersDay-root.Mui-selected, .MuiPickersDay-root.MuiPickersDay-dayWithMargin:hover
{
   color: white;
   background-color: #0062FF !important;
}

/* several styles below here for user-defined alert inside helpContent */
.helpContentAlert
{
   padding: 6px 16px;
   font-size: 1rem;
   font-weight: 300;
   line-height: 1.6;
   display: flex;
}

.helpContentAlert .MuiAlert-icon
{
   display: flex;
   margin-right: 12px;
   padding: 7px 0;
   font-size: 22px;
   opacity: 0.9;
}

.helpContentAlert .MuiAlert-icon .material-icons-round
{
   display: inline-block;
   width: 1em;
   height: 1em;
}

.helpContentAlert .MuiAlert-message
{
   padding: 8px 0;
}

.helpContentAlert.info,
.banner.info
{
   background-color: rgb(234, 242, 255);
   color: rgb(20, 51, 102);
}

.helpContentAlert.info .MuiAlert-icon .material-icons-round,
.banner.info .MuiAlert-icon .material-icons-round
{
   color: #0062FF;
}

.helpContentAlert.success,
.banner.success
{
   background-color: rgb(240, 248, 241);
   color: rgb(44, 76, 46);
}

.helpContentAlert.success .MuiAlert-icon .material-icons-round,
.banner.success .MuiAlert-icon .material-icons-round
{
   color: #4CAF50;
}

.helpContentAlert.warning,
.banner.warning
{
   background-color: rgb(254, 245, 234);
   color: rgb(100, 65, 20);
}

.helpContentAlert.warning .MuiAlert-icon .material-icons-round,
.banner.warning .MuiAlert-icon .material-icons-round
{
   color: #fb8c00;
}

.helpContentAlert.error,
.banner.error
{
   background-color: rgb(254, 239, 238);
   color: rgb(98, 41, 37);
}

.helpContentAlert.error .MuiAlert-icon .material-icons-round,
.banner.error .MuiAlert-icon .material-icons-round
{
   color: #F44335;
}

/* the alert widget, was built with minimal (no?) margins, for embedding in
 a parent widget; but for using it on a process, give it some breathing room */
.processRun .widget .MuiAlert-root
{
   margin: 2rem 1rem;
}

/* default styles for a block widget overlay */
.blockWidgetOverlay
{
   font-weight: 400;
   position: relative;
   top: 15px;
   height: 0;
   display: flex;
   font-size: 14px;
   flex-direction: column;
   align-items: center;
}
.blockWidgetOverlay a
{
   color: #0062FF !important;
}

@media (min-width: 768px)
{
   .recordSidebar
   {
      max-width: 250px !important;
   }
}

@media (min-width: 1400px)
{
   .recordSidebar
   {
      width: 250px !important;
      max-width: 250px !important;
   }

   .recordWithSidebar
   {
      max-width: calc(100vw - 520px) !important;
      flex-grow: 1 !important;
   }
}

.recordWithSidebar .MuiGrid-grid-lg-12
{
   /* this helps make sure the overflow-wrap: break-word always applies */
   max-width: 100%;
}

.stickyBottomButtonBar
{
   padding-bottom: 1rem !important;
   padding-right: 0 !important;
   margin-bottom: -4rem !important;
   margin-top: -1.5rem !important;
   position: sticky;
   bottom: 0;
   background: linear-gradient(to bottom, transparent 0, #f0f2f5 4px);
   z-index: 40; /* have needed a little here, e.g. to get above MuiDataGrid-overlay and ACE */
}

.modalBottomButtonBar
{
   padding-bottom: 0 !important;
   padding-right: 0 !important;
}

.stickyBottomButtonBar>.MuiGrid-container
{
   padding-top: 1rem;
}

/* try to fix number input end adornment conflict with up/down spinner */
.MuiFormControl-root:has(input[type="number"])
{
   transition: background-position 0.15s ease;
   /* give an initial value to avoid it flying in from nowhere when it appears */
   background-position: right 0.75rem center;
}
.MuiFormControl-root:has(input[type="number"]:focus),
.MuiFormControl-root:has(input[type="number"]):hover
{
   background-position: right 1.75rem center;
}

